repaired the display of cards on mobile

--- a/src/styles/pages/_category.scss
+++ b/src/styles/pages/_category.scss
@@ -48,3 +48,13 @@
     }
   }
 }
+
+@media screen and (max-width: $MobilePortrait) {
+  .category {
+    .row-3 {
+      .card {
+        width: 100%;
+      }
+    }
+  }
+}
