--- a/src/styles/pages/_nouveautes.scss
+++ b/src/styles/pages/_nouveautes.scss
@@ -26,6 +26,7 @@
     .card {
       width: 100%;
       padding: 20px 0;
+      margin: 0;
     }
   }
   .row-4 {
